# solar-dashboard

./: .env.example  .gitignore  AGENTS.md  README.md  ntfy_client.py  plan.md  polycab_client.py  pyproject.toml  run_local_collector.py
.github/workflows/: collect.yml  daily_alert.yml
alerts/: daily_alert.py
collector/: collect.py
dashboard/: app.py
db/: schema.sql
recon/: api_client.py  notes.md
recon/sample_responses/: GroupList.json  InverterDetailDayLine.json  InverterDetailInfoNewone.json  getAllPacDay_v1.json  getAllPacMonth.json  getAllPacYear.json  groupAreaCurve.json
